--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ h1,h2,h3,h4,h5,h6,p{
 ul,ol{
     list-style: none;
 }
+body{
+    font-family: "Poppins", sans-serif;
+}
 /* common css ends */
 /* navbar starts here */
 .navbar{
@@ -39,7 +42,7 @@ ul,ol{
     color: #5e5e5e;
 }
 
-.navbar button{
+.navbar .navbar_button button{
     color: #fff;
     font-size: 14px;
     font-weight: 500;
@@ -56,7 +59,7 @@ ul,ol{
     column-gap: 7px;
     transition: all linear 0.3s;
 }
-.navbar button:hover{
+.navbar .navbar_button button:hover{
     background-color: #4b26df;
   
 }
@@ -190,7 +193,7 @@ ul,ol{
     font-size: 44px;
     font-weight: 600;
     font-family: "Poppins", sans-serif;
-    letter-spacing: 0.5%;
+    letter-spacing: 0.5px;
     margin: 12px 0;
 }
 
@@ -305,6 +308,10 @@ ul,ol{
 #brand{
     margin-top: 122px;
 }
+.brand_item img{
+    width: 100%;
+    height: 100%;
+}
 /* Brand ends here */
 
 /* Portfolio starts here */
@@ -340,7 +347,7 @@ ul,ol{
     font-size: 44px;
     font-weight: 600;
     font-family: "Poppins", sans-serif;
-    letter-spacing: 0.5%;
+    letter-spacing: 0.5px;
     margin-top: 11px;
 }
 
@@ -429,7 +436,7 @@ ul,ol{
     font-size: 44px;
     font-weight: 600;
     font-family: "Poppins", sans-serif;
-    letter-spacing: 0.5%;
+    letter-spacing: 0.5px;
     margin-top: 11px;
 }
 
@@ -518,11 +525,11 @@ ul,ol{
 
 .cta_content h4{
     color: #333;
-    font-size: 50px;
+    font-size: 47px;
     font-weight: 600;
     font-family: "Poppins", sans-serif;
-    letter-spacing: 0.5%;
-    line-height: 72px;
+    letter-spacing: 0.5px;
+    line-height: 70px;
     padding-right: 50px; 
 }
 
@@ -573,21 +580,46 @@ ul,ol{
     margin-top: 24px;
     margin-bottom: 20px;
 }
-
+.contact_info ul li{
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+}
+.contact_info .social_media{
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
 .contact_info ul li a{
     color: #fff;
-    margin-right: 10px;    
 }
 
-
-.footer_icon i{
+.social_media i{
     color: #fff;
     margin-right: 10px;
 }
 
-.footer_line{
-    border-bottom: 1px solid #fff;
-    
+.footer_menu ul{
+    display: flex;
+    align-items: center;
+    column-gap: 46px;
+    margin-bottom: 0;
+}
+
+.footer_menu ul li a{
+    color: #fff;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;    
+}
+
+.copyright_text span{
+    color: #fff;
+    opacity: 0.6;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 1.5px;
 }
 
 
